Updating source code from IntelliJ warnings